adding about me

--- a/files1.html
+++ b/files1.html
@@ -3,7 +3,20 @@
     <li> I am always energetic and eager to learn new skills.</li>
     <li> I am Flexible and Humble.</li>
     <li> I am able to handle multiple tasks on Daily.</li>
-    
+    <li> I am Honest.</li>   
+</ul>
+<h2>Background skills</h2>
+<ol>
+    <li>Html ad Css</li>
+    <li>JavaScript</li>
+    <li>Financial Management</li>
+    <li>Networking</li>
+</ol>
+<h2>Hobbies</h2>
+<ul>
+    <li>I like Swimming</li>
+    <li>I like Reading</li>
+    <li>I like Watching Movies</li>
+    <li>I like Eating ad Drinking</li>
 
-    
 </ul>
