--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JESSICA'S PORTFOLIO</title>
     <nav>
-            <a href="home">HOME</a>
+            <a href="files1.html">HOME</a>
             <a href="about">ABOUT ME</a>
             <a href="contact">CONTACT ME</a>
     
