--- a/files1.html
+++ b/files1.html
@@ -1,4 +1,8 @@
 <h2>About myself</h2>
+<p>I'm Jessica Ritha Isimbi am a 23 years old Girl</p>
+<p>Am a student in Moringa Wecode School</p>
+<p>i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.</p>
+<p>I Do like Moringa School.</p>
 <ul>
     <li> I am always energetic and eager to learn new skills.</li>
     <li> I am Flexible and Humble.</li>
