--- a/files1.html
+++ b/files1.html
@@ -1,5 +1,6 @@
 <h2>About myself</h2>
 <p>I'm Jessica Ritha Isimbi am a 23 years old Girl</p>
+<p>I'm the only one kid in my family</p>
 <p>Am a student in Moringa Wecode School</p>
 <p>i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.</p>
 <p>I Do like Moringa School.</p>
