--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JESSICA'S PORTFOLIO</title>
     <nav>
-            <a href="files1.html">HOME</a>
-            <a href="about">ABOUT ME</a>
-            <a href="contact">CONTACT ME</a>
+            <a href="home">HOME</a>
+            <a href="files1.html">ABOUT ME</a>
+            <a href="files2.html">MY PROJECT</a>
+            <a href="files3.html">CONTACT ME</a>
     
     </nav>
 </head>
