--- a/files3.html
+++ b/files3.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-        <h2>SOCIALIZE</h2>
-        <P>if u are interested u should contant me or write me on.</P>
-        <p>social media icon with font awesome</p>
+        <h2 class="amen">CONTACT ME</h2>
+        <P>+(250)784967255</P>
+        <P>E-mail :jessicaritha@gmail.com</P>
+        <h2 class="mine">SOCIALIZE WITH ME</h2>
         <div class="media">
             <ul>
                 <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
