--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p>TO THRIVE IN THE 21ST CENTURY</p>
     <P>so you can do great workand future-proof yourself in a world of constant change.</P>
     <a href="download my cv">DOWNLOAD MY CV</a>
+    <p> copyright &copy; Jessy,  2019</p>
 
 </body>
 </html>
