--- a/files3.html
+++ b/files3.html
@@ -16,9 +16,9 @@
         <h2 class="mine">SOCIALIZE WITH ME</h2>
         <div class="media">
             <ul>
-                <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
-                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                <li><i class="fa fa-github-alt" aria-hidden="true"></i></li>
+                <li><a href="https://www.facebook.com/isimbi.jessicaritha" target="_blank" class="fa fa-facebook-official" aria-hidden="true"></a></li>
+                <li><a href="https://www.instagram.com/rijessy/?hl=en"target="_blank" class="fa fa-instagram" aria-hidden="true"></a></li>
+                <li><a href="https://github.com/isimbiJessica/project" target="blank" class="fa fa-github-alt" aria-hidden="true"></a></li>
                 
             </ul>
         </div>
