--- a/files2.html
+++ b/files2.html
@@ -6,8 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>my project</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+   
 </head>
 <body>
+
+        <nav>
+                <ul>
+                 <li><a href="index.html">HOME</a></li>
+                      <li><a href="files1.html">ABOUT ME</a></li>
+                      <li><a href="files2.html">MY PROJECT</a></li>
+                       <li><a href="files3.html">CONTACT</a></li>
+                </ul>
+               </nav>
+       
     <h2>THE PROJECT I HAVE DONE</h2>
 
     
