--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JESSICA'S PORTFOLIO</title>
-    <nav>
-            <a href="home">HOME</a>
-            <a href="files1.html">ABOUT ME</a>
-            <a href="files2.html">MY PROJECT</a>
-            <a href="files3.html">CONTACT ME</a>
-    
-    </nav>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
+        
     <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
-    <h2>Hi</h2>
-    <p>I'm Jessica Ritha Isimbi</p>
-    <p>STUDENT IN MORINGA WECODE SCHOOL</p>
-    <p>TO THRIVE IN THE 21ST CENTURY</p>
-    <P>so you can do great workand future-proof yourself in a world of constant change.</P>
-    <a href="download my cv">DOWNLOAD MY CV</a>
-    <p> copyright &copy; Jessy,  2019</p>
+    <nav>
+            <ul>
+             <li><a href="index.html">HOME</a></li>
+                  <li><a href="files1.html">ABOUT ME</a></li>
+                  <li><a href="files2.html">MY PROJECT</a></li>
+                   <li><a href="files3.html">CONTACT</a></li>
+            </ul>
+           </nav>
+<div class="two"
+     <h2>Hi</h2>
+     <p>I'm Jessica Ritha Isimbi</p>
+     <p>STUDENT IN MORINGA WECODE SCHOOL</p>
+     <p>TO THRIVE IN THE 21ST CENTURY</p>
+     <P>so you can do great workand future-proof yourself in a world of constant change.</P>
+     <a href="download my cv">DOWNLOAD MY CV</a>
+     <p> copyright &copy; Jessy,  2019</p>
+</div>
 
 </body>
 </html>
