--- a/files1.html
+++ b/files1.html
@@ -18,14 +18,16 @@
                        <li><a href="files3.html">CONTACT</a></li>
                 </ul>
                </nav>
-       
+<div class="four"> 
         <h2>About myself</h2>
-        <p>I'm Jessica Ritha Isimbi am a 23 years old Girl</p>
+        <p>I'm Jessica Ritha Isimbi am a <strong>23 Years old</strong>  Girl</p>
         <p>I'm the only one kid in my family</p>
         <p>Am a student in Moringa Wecode School</p>
         <p>i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.</p>
         <p>I Do like Moringa School.</p>
         <ul>
+            <img src="file:///home/wecode/Downloads/20190712_161105%20(1).jpg" height="430" width="380">
+</div>
             <li> I am always energetic and eager to learn new skills.</li>
             <li> I am Flexible and Humble.</li>
             <li> I am able to handle multiple tasks on Daily.</li>
