--- a/files1.html
+++ b/files1.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+        <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
 
         <nav>
                 <ul>
@@ -18,13 +19,14 @@
                        <li><a href="files3.html">CONTACT</a></li>
                 </ul>
                </nav>
-<div class="four"> 
+ 
         <h2>About myself</h2>
+        <div class="four"></div>
         <p>I'm Jessica Ritha Isimbi am a <strong>23 Years old</strong>  Girl</p>
-        <p>I'm the only one kid in my family</p>
-        <p>Am a student in Moringa Wecode School</p>
-        <p>i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.</p>
-        <p>I Do like Moringa School.</p>
+        I'm the only one kid in my family
+        Am a student in Moringa Wecode School
+        i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.
+        I Do like Moringa School.
         <ul>
             <img src="file:///home/wecode/Downloads/20190712_161105%20(1).jpg" height="430" width="380">
 </div>
