--- a/files2.html
+++ b/files2.html
@@ -9,6 +9,7 @@
    
 </head>
 <body>
+        <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
 
         <nav>
                 <ul>
