--- a/files3.html
+++ b/files3.html
@@ -11,6 +11,7 @@
    
 </head>
 <body>
+        <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
         <nav>
                 <ul>
                  <li><a href="index.html">HOME</a></li>
