--- a/files1.html
+++ b/files1.html
@@ -21,14 +21,21 @@
                </nav>
  
         <h2>About myself</h2>
-        <div class="four"></div>
+        <div class="four">
+            <div id="fouro">
         <p>I'm Jessica Ritha Isimbi am a <strong>23 Years old</strong>  Girl</p>
-        I'm the only one kid in my family
-        Am a student in Moringa Wecode School
-        i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.
-        I Do like Moringa School.
+        <p>'m the only one kid in my family</p>
+        <p>Am a student in Moringa Wecode School</p>
+        <p>i joined moringa because i want to become a developer and moringa gonna help me to achieve my dreams.</p>
+        <p>I Do like Moringa School.</p>
+           </div>  
+           <div id="fourt">
+               <img src="file:///home/wecode/Downloads/20190712_161105%20(1).jpg" height="430" width="380">
+           </div>
+        </div>
+
         <ul>
-            <img src="file:///home/wecode/Downloads/20190712_161105%20(1).jpg" height="430" width="380">
+            
 </div>
             <li> I am always energetic and eager to learn new skills.</li>
             <li> I am Flexible and Humble.</li>
