--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+<div class="five">
 <body>
         
     <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
@@ -20,15 +21,16 @@
                    <li><a href="files3.html">CONTACT</a></li>
             </ul>
            </nav>
-<div class="two"
+<div id="two"
      <h2>Hi</h2>
-     <p>I'm Jessica Ritha Isimbi</p>
+     <p>I'm Jessica Ritha ISIMBI</p>
      <p>STUDENT IN MORINGA WECODE SCHOOL</p>
      <p>TO THRIVE IN THE 21ST CENTURY</p>
-     <P>so you can do great workand future-proof yourself in a world of constant change.</P>
+     <P>so you can do great work and future-proof yourself in a world of constant change.</P>
      <a href="download my cv">DOWNLOAD MY CV</a>
      <p> copyright &copy; Jessy,  2019</p>
 </div>
 
 </body>
+</div>
 </html>
