--- a/files1.html
+++ b/files1.html
@@ -71,7 +71,7 @@
             <li>I hate ignoring peoples</li>
         </ul>
         </div>
-        <p> copyright &copy; Jessy,  2019</p>
+        <p id="minus"> copyright &copy; Jessy,  2019</p>
     
 </body>
 </html>
