--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <div id="two"
      <h2>Hi</h2>
      <p>I'm Jessica Ritha ISIMBI</p>
-     <p>STUDENT IN MORINGA WECODE SCHOOL</p>
-     <p>TO THRIVE IN THE 21ST CENTURY</p>
+     <p>Student in <strong>MORINGA WECODE SCHOOL</strong></p>
+     <p>To thrive in the 21ST century</p>
      <P>so you can do great work and future-proof yourself in a world of constant change.</P>
-     <a href="download my cv">DOWNLOAD MY CV</a>
-     <p> copyright &copy; Jessy,  2019</p>
+     <a href="download my cv">download my cv</a>
+     <p id="club"> copyright &copy; Jessy,  2019</p>
 </div>
 
 </body>
