--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
     <img src="https://image.shutterstock.com/image-vector/jr-initial-circle-company-logo-260nw-1106955824.jpg" height="120" width="120">
     <nav>
-            <ul>
+            <ul id="second">
              <li><a href="index.html">HOME</a></li>
                   <li><a href="files1.html">ABOUT ME</a></li>
                   <li><a href="files2.html">MY PROJECT</a></li>
