changing background photo

--- a/files1.html
+++ b/files1.html
@@ -47,19 +47,19 @@
 <h2>Background skills</h2>
 <div class="empass">
         <ol>
-            <li>Html ad Css</li>
-            <li>JavaScript</li>
-            <li>Financial Management</li>
-            <li>Networking</li>
+            <p>Html ad Css</p>
+            <p>JavaScript</p>
+            <p>Financial Management</p>
+            <p>Networking</p>
         </ol>
 </div>
         <h2>Hobbies</h2>
 <div class="empassi">
         <ul>
-            <li>I like Swimming</li>
-            <li>I like Reading</li>
-            <li>I like Watching Movies</li>
-            <li>I like Eating ad Drinking</li>
+            <p>I like Swimming</p>
+            <p>I like Reading</p>
+            <p>I like Watching Movies</p>
+            <p>ike Eating ad Drinking</p>
         
         </ul>
 </div>
