adding new paragraph

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                    <li><a href="files3.html">CONTACT</a></li>
             </ul>
            </nav>
-<div id="two"
+<div id="two">
      <h2>Hi</h2>
      <p>I'm Jessica Ritha ISIMBI</p>
      <p>Student in <strong>MORINGA WECODE SCHOOL</strong></p>
