--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            </nav>
 <div id="two">
      <h2>Hi</h2>
-     <p>I'm Jessica Ritha ISIMBI</p>
+     <p>I'm <strong><em>JESSICA RITHA ISIMBI</em></strong> </p>
      <p>Student in <strong>MORINGA WECODE SCHOOL</strong></p>
      <p>To thrive in the 21ST century</p>
      <P>so you can do great work and future-proof yourself in a world of constant change.</P>
