--- a/files2.html
+++ b/files2.html
@@ -20,7 +20,7 @@
                 </ul>
                </nav>
        <div class="vasse">
-    <h2>THE PROJECT I HAVE DONE</h2>
+    <h2 id="edu">MY PROJECT</h2>
     <p>Am a self motivated HTML and JAVASCRIPT developer Looking for a junior developer job.Am always pushing myself to grow by setting firm goals for myself,so I take the necessary steps to achieve my Dreams.</p>
     <p>that's why here i posted my first project i did myself. it is a website for selling and delivering the flowers to the world.</p>
     <a href="take a look" target ="blank">Take a Look</a>
