--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <p>Student in <strong>MORINGA WECODE SCHOOL</strong></p>
      <p>To thrive in the 21ST century</p>
      <P>so you can do great work and future-proof yourself in a world of constant change.</P>
-     <a href="download my cv" target="blank">download my cv</a>
+     <a href="files5.html" target="blank">download my cv</a>
      <p id="club"> copyright &copy; Jessy,  2019</p>
 </div>
 
