--- a/files1.html
+++ b/files1.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="empas">
-        <h2 id="zero">About myself</h2>
+        <h2>About myself</h2>
     
             <p>I am always energetic and eager to learn new skills.</p>
             <p>I am Flexible and Humble.</p> </li>
