--- a/files3.html
+++ b/files3.html
@@ -22,8 +22,10 @@
                </nav>
 
         <h2 class="amen">CONTACT ME</h2>
+        <div id="evenly">
         <P>Phone No :+(250)784967255</P>
         <P>E-mail :jessicaritha@gmail.com</P>
+        </div>
         <h2 class="mine">SOCIALIZE WITH ME</h2>
         <div class="media">
             
