styling the link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JESSICA'S PORTFOLIO</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
 
 </head>
 <div class="five">
@@ -27,7 +28,7 @@
      <p>Student in <strong>MORINGA WECODE SCHOOL</strong></p>
      <p>To thrive in the 21ST century</p>
      <P>so you can do great work and future-proof yourself in a world of constant change.</P>
-     <a href="files5.html" target="blank">download my cv</a>
+     <a id="fo" href="files5.html" target="blank">download my cv</a>
      <p id="club"> copyright &copy; Jessy,  2019</p>
 </div>
 
